# docker-owl

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml  deploy.sh
.github/: labels.json
src/: docker.rs  lib.rs  main.rs
src/plugins/: encrypt.rs  mod.rs  template.rs
templates/: nginx.default.tmpl
