[package]
name = "docker-owl"
version = "0.1.0"
authors = ["jagu"]

[dependencies.shiplift]
# path = "src/shiplift"
git = "https://github.com/softprops/shiplift.git"

[dependencies]
openssl-probe = "0.1"
error-chain = "0.11"
url = "1.6"
docopt = "0.8"
serde = "1.0"
serde_derive = "1.0"
tera = "0.11"
acme-client = "0.5"
termios = "0.3"
